fix navbar on mobile devices

--- a/src/app/assets/styles/Nav.module.css
+++ b/src/app/assets/styles/Nav.module.css
@@ -114,6 +114,16 @@
 .userEmail {
   margin-left: 8px;
 }
+@media (max-width: 700px) {
+
+  .userEmail {
+    width: 100px;
+    overflow-x: scroll;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: inline-block;
+  }
+}
 
 .dropdownMenu {
   position: absolute;
